return 402 if quota limit is reached
