# openapi/smartevents_mgmt.yaml
@@ -133,7 +133,7 @@ paths:
           description: Unauthorized.
         "403":
           description: Forbidden.
-        "406":
+        "402":
           description: Not acceptable.
           content:
             application/json:
@@ -409,7 +409,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorsList'
-        "406":
+        "402":
           description: Not acceptable.
           content:
             application/json:
